<resources>
    <string name="app_name">Finance Simplified</string>
    <string name="welcome">Welcome</string>
    <string name="emi_calculators">EMI Calculators</string>
    <string name="emi_basic">EMI-Basic</string>
    <string name="emi_advanced">EMI-Advanced</string>
    <string name="gst_amp_vat_calculators"><![CDATA[GST&VAT Calculators]]></string>
    <string name="gst">GST</string>
    <string name="vat">VAT</string>
    <string name="cash_calculators">Cash Calculators</string>
    <string name="cash">Cash</string>
    <string name="set_hint1">If you have any questions, don’t hesitate to reach out to us!</string>
    <string name="set_hint2">Dewan Cement Limited</string>
    <string name="set_hint3">Copyright © www.dewancementltd.com, All Rights Reserved.</string>
    <string name="settings">Settings</string>
    <string name="result">Result</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="x">X</string>
    <string name="deng">=</string>
    <string name="qian">₹  </string>
    <string name="loan_amount">Loan Amount</string>
    <string name="please_input">Please input</string>
    <string name="annula_interest_rate">Annula Interest Rate</string>
    <string name="per">%</string>
    <string name="tenure">Tenure</string>
    <string name="fees_and_charge">Fees and Charge</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="_1_360">1–360</string>
    <string name="emi_scheme">EMI scheme</string>
    <string name="arrear_emi">Arrear EMI</string>
    <string name="total_interest">Total Interest</string>
    <string name="monthly_loan_emi">Monthly Loan EMI</string>
    <string name="total_cost">Total Cost</string>
    <string name="principal_interest">Loan Amount+Interest</string>
    <string name="principal_interest1">Loan Amount+Interest+Fees and Charge</string>
    <string name="repayment_schedule"><u>Repayment Schedule</u></string>
    <string name="advance_emi">Advance EMI</string>
    <string name="initial_amount">Initial Amount</string>
    <string name="gst_rate">GST Rate</string>
    <string name="vat_rate">VAT Rate</string>
    <string name="charging_gst">Charging GST</string>
    <string name="charging_vat">Charging VAT</string>
    <string name="add_gst">Add GST</string>
    <string name="subtract_gst">Subtract GST</string>
    <string name="add_vat">Add VAT</string>
    <string name="subtract_vat">Subtract VAT</string>
    <string name="cgst">CGST:</string>
    <string name="sgst">SGST:</string>
    <string name="total_gst">Total GST</string>
    <string name="total_vat">Total VAT</string>
    <string name="gst_inclusive">GST inclusive</string>
    <string name="vat_inclusive">VAT inclusive</string>
    <string name="time">Time</string>
    <string name="principal">Principal</string>
    <string name="interest">Interest</string>
    <string name="total">Total</string>
    <string name="_0">0</string>
    <string name="_92_319_199_4956">+92 319 199 4956</string>
    <string name="asimawan0829_gmail_com">asimawan0829@gmail.com</string>
    <string name="privacy_policy"><u><font color="#FF2F8BFF">Privacy Policy</font></u></string>
    <string name="dewancementltd_outlook_com">dewancementltd@outlook.com</string>
</resources>