<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/bar"
        layout="@layout/layout_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/app_name"
        android:textColor="@color/ff111827"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/set_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/ffababab"
        android:textSize="12sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_set_item"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/set_hint1"
            android:textColor="@color/ff2f8bff"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/set_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@mipmap/email"
            android:drawableEnd="@mipmap/copy"
            android:drawablePadding="12dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/dewancementltd_outlook_com"
            android:textColor="@color/ff2b332e"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/set_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@mipmap/email"
            android:drawableEnd="@mipmap/copy"
            android:drawablePadding="12dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/asimawan0829_gmail_com"
            android:textColor="@color/ff2b332e"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/set_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/privacy_policy"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/set_hint2"
        android:textColor="@color/ff686868"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/set_hint3"
        android:textColor="@color/ffababab"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

</androidx.appcompat.widget.LinearLayoutCompat>