<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <include
        android:id="@+id/bar"
        layout="@layout/layout_title" />
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_height="50dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/shape_sc1"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/_161616"
            android:textSize="14sp"
            android:text="@string/time"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/shape_sc2"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/f06d1b"
            android:textSize="14sp"
            android:text="@string/principal"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/shape_sc3"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/_161616"
            android:textSize="14sp"
            android:text="@string/interest"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/shape_sc4"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/_161616"
            android:textSize="14sp"
            android:text="@string/total"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_schedule"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>