<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ui.CashActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/bar"
        layout="@layout/layout_title"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        android:overScrollMode="never">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cash"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/efefef"
                android:layout_marginTop="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/_2b403e"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:text="@string/result"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cash_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/_2f8bff"
                    android:textSize="16sp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/efefef"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:layout_marginTop="39dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cash_reset"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_chash_reset"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="14sp"
                    android:textColor="@color/ff2f8bff"
                    android:text="@string/reset"
                    android:layout_marginEnd="10dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cash_calculate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/shape_calculate"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="14sp"
                    android:text="@string/calculate"
                    android:textColor="@color/white"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>